--- a/src/AboutWindow.xaml
+++ b/src/AboutWindow.xaml
@@ -5,9 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ZDY="http://www.zdyla.com/coding"
         xmlns:Properties="clr-namespace:Zhai.VideoView.Properties" 
-        xmlns:Converters="clr-namespace:Zhai.VideoView.Converters" 
         Title="{Binding Path=AppName, Source={x:Static Properties:Settings.Default}, StringFormat=关于 {0}}"
-        Theme="{Binding SettingsWindow.IsWindowDarked, Source={StaticResource Locator}, Converter={Converters:VideoViewThemeConverter}}"   
+        Theme="Dark"   
         WindowStartupLocation ="CenterScreen"  
         TitleBarVisibility="Collapsed"
         ShowInTaskbar="False"
