--- a/src/NavWindow.xaml
+++ b/src/NavWindow.xaml
@@ -4,8 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ZDY="http://www.zdyla.com/coding"
-        xmlns:Converters="clr-namespace:Zhai.VideoView.Converters"
-        Theme="{Binding SettingsWindow.IsWindowDarked, Source={StaticResource Locator}, Converter={Converters:VideoViewThemeConverter}}"
+        Theme="Dark" 
         WindowStartupLocation ="CenterScreen" 
         ResizeMode="NoResize"
         ShowInTaskbar="False"
