--- a/src/SettingsWindow.xaml
+++ b/src/SettingsWindow.xaml
@@ -5,8 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ZDY="http://www.zdyla.com/coding" 
         xmlns:Properties="clr-namespace:Zhai.VideoView.Properties"
-        xmlns:Converters="clr-namespace:Zhai.VideoView.Converters"
-        Theme="{Binding SettingsWindow.IsWindowDarked, Source={StaticResource Locator}, Converter={Converters:VideoViewThemeConverter}}"
+        Theme="Dark" 
         DataContext="{Binding SettingsWindow, Source={StaticResource Locator}}"
         WindowStartupLocation ="CenterScreen" 
         ShowInTaskbar="False"
